Added images and navbar to the home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,11 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.navbar {
+    background: #C63D0F; 
+}
+
+body {
+    background: #FDF3E7;
+}
