--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,146 @@
-<div class="">
-    <h2>VISION STATEMENT</h2>
-    <p><em>“TO BE A CHRIST-CENTRED, EVANGELISTIC, DISCIPLINED, DEMOCRATIC, UNITED,SELF-SUSTAINING AND GROWING CHURCH.”</em></p>
-		
-	<h2>MISSION STATEMENT</h2>
-    <p><em>“Improve uphold centrality of the word of God and through the enablement of the holy spirit, adopt a holistic development of
-			her human and material resources to:”</em></p>
-		   
-    <ul>
-		<li>Improve church growth through evangelism and nurture</li>
-		<li>Attain self-sufficiency through effective resource mobilization</li>
-		<li>Address all factors that inhibit development through</li>
-		<li>Advocacy and effective delivery of Social Services</li>
-		<li>Uphold the Reformed Tradition and cherish partnership with the worldwide body of Christ</li>
-	</ul>
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <%= image_tag "slider/img7.png" %>
+      <div class="carousel-caption">
+        <h3>God Bless Our Soul</h3>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag "slider/img2.png" %>
+      <div class="carousel-caption">
+        <h1>May your name be praise</h1>
+      </div>
+    </div>
+    
+    <div class="item">
+      <%= image_tag "slider/img2.png" %>
+      <div class="carousel-caption">
+        <h3>God is good</h3>
+      </div>
+    </div>
+    
+
+
+  <!-- Controls -->
+
 </div>
+
+</div>
+
+<div class="container">
+
+<div class="row">
+	  <div class="col-xs-6 col-md-4">
+	    <div class="thumbnail">
+	      <%= image_tag"logos/new.png", class: 'img-circle' %>
+	      <div class="caption">
+	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
+	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
+	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
+	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
+	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
+	      </div>
+	    </div>
+	  </div>
+	  
+	    <div class="col-xs-6 col-md-4">
+	    <div class="thumbnail">
+	      <%= image_tag "logos/men.png", class: 'img-circle' %>
+	      <div class="caption">
+	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
+	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
+	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
+	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
+	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
+	      </div>
+	    </div>
+	  </div>
+	  
+	  <div class="col-xs-6 col-md-4">
+	    <div class="thumbnail">
+	      <%= image_tag("logos/men.png") %>
+	      <div class="caption">
+	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
+	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
+	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
+	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
+	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
+	      </div>
+	    </div>
+	  </div>
+	  
+	    <div class="col-xs-6 col-md-4">
+	    <div class="thumbnail">
+	      <%= image_tag"logos/men.png" %>
+	      <div class="caption">
+	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
+	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
+	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
+	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
+	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
+	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
+	      </div>
+	    </div>
+	  </div>
+ 
+  </div>
+  
+  <div class="row>
+  
+  	
+  	<div class="page-header>
+  		<h1 class="text-center">OUR GALLERY</h1>
+  	</div>
+  	
+  	
+	<div class="col-xs-6 col-md-4">
+    	<div class="thumbnail">
+      		<%= image_tag "gallery/1.png" %>
+   		</div>
+	</div>
+    
+    <div class="col-xs-6 col-md-4">
+    	<div class="thumbnail">
+     		<%= image_tag "gallery/2.png" %>
+      	</div>
+  	</div>
+    
+    <div class="col-xs-6 col-md-4">
+    	<div class="thumbnail">
+      		<%= image_tag "gallery/3.png" %>
+      	</div>
+    </div>
+
+	<div class="col-xs-6 col-md-4">
+		<div class="thumbnail">
+			<%= image_tag "gallery/4.png" %>
+		</div>
+	</div>
+	
+	<div class="col-xs-6 col-md-4">
+		<div class="thumbnail">
+			<%= image_tag "gallery/5.png" %>
+		</div>
+	</div>
+	
+		<div class="col-xs-6 col-md-4">
+		<div class="thumbnail">
+			<%= image_tag "gallery/6.png" %>
+		</div>
+	</div>
+</div>
+  
+</div>
+
