--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
+ 
   <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
@@ -17,9 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        
-        <h3>Emmanuel Presby</h3> 
-
+        <%= image_tag "logos/psg.png" %>
       </div>
       
       <div class="collapse navbar-collapse" id="main-nav-collapse">
@@ -31,8 +29,10 @@
       </div>
     </div>
   </nav>
-  
-<%= yield %>
+
+
+  <%= yield %>
+
 
 </body>
 </html>
