Modified logo images and home page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,10 +14,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.navbar {
-    background: #C63D0F; 
-}
-
 body {
     background: #FDF3E7;
+}
+
+.navbar {
+    background: #fff; 
+}
+
+.imag {
+    float: left;
+    padding-right: 5px;
+}
+
+#bg {
+    background: #fff;
 }
