--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+<div class="container-fluid">
+	<div class="row">
+		
+
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -36,74 +40,121 @@
 
 </div>
 
-<div class="container">
+	</div>
+</div>
 
+<div id="bg">
+<div class="container">
 <div class="row">
-	  <div class="col-xs-6 col-md-4">
-	    <div class="thumbnail">
-	      <%= image_tag"logos/new.png", class: 'img-circle' %>
-	      <div class="caption">
-	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
-	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
-	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
-	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
-	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
-	      </div>
-	    </div>
-	  </div>
-	  
-	    <div class="col-xs-6 col-md-4">
-	    <div class="thumbnail">
-	      <%= image_tag "logos/men.png", class: 'img-circle' %>
-	      <div class="caption">
-	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
-	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
-	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
-	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
-	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
-	      </div>
-	    </div>
-	  </div>
-	  
-	  <div class="col-xs-6 col-md-4">
-	    <div class="thumbnail">
-	      <%= image_tag("logos/men.png") %>
-	      <div class="caption">
-	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
-	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
-	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
-	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
-	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
-	      </div>
-	    </div>
-	  </div>
-	  
-	    <div class="col-xs-6 col-md-4">
-	    <div class="thumbnail">
-	      <%= image_tag"logos/men.png" %>
-	      <div class="caption">
-	        <h3 class="text-center">MEN'S FELLOWSHIP</h3>
-	        <p>We give to the good lord who inspired the faithful twelve who gathered on the 20th September 1981 
-	        in the children’s service hall at the old site to begin the Emmanuel congregation Men’s fellowship. 
-	        The idea of the formation of the congregational men’s fellowship was mooted at a congregational forum 
-	        by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC).</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Button</a> 
-	      </div>
-	    </div>
-	  </div>
- 
-  </div>
-  
-  <div class="row>
-  
-  	
-  	<div class="page-header>
-  		<h1 class="text-center">OUR GALLERY</h1>
+	
+	<div>
+  		<h3 class="text-center"><strong>GENERATIONAL AND CONGREGATIONAL GROUP</strong></h3>
   	</div>
-  	
+	
+	<div class="col-md-4">
+	<h4 class="text-center"><strong>MEN'S FELLOWSHIP</strong></h4>
+	
+	<p><%= image_tag"logos/new.png", class: 'imag' %>We give to the good lord who inspired the faithful twelve who 
+	gathered on the 20th September 1981 in the children’s service hall at the old site to begin the Emmanuel <a href="#">Read more</a> </p> 
+	
+	</div>
+	  
+	<div class="col-md-4">
+	    
+	    <h4 class="text-center"><strong>WOMEN'S FELLOWSHIP</strong></h4>
+	    <p><%= image_tag "logos/women.png", class: 'imag' %>To God be the glory for great things He has done. Amen. The Dansoman
+	    Emmanuel Congregation Women’s Fellowship was started on 18th May, 1975 with 18 members. It was the first group to be formed 
+	    in the church ehich has been established about six months earlier on December <a href="#">Read more</a> </p>
+	    
+	    
+  	</div>
+	  
+	<div class="col-md-4">
+		
+		<h4 class="text-center">YOUNG ADULT FELLOWSHIP</h4>
+	      
+
+<p><%= image_tag"logos/yaf.png", class: 'imag' %>The 2005 General Assembly held in Kumasi at the Kwame Nkrumah University of 
+Science and Technology(KNUST) decided that a new group should be formed in all the congregations of the Presbyterian Church of 
+Ghana. People to belong to this new group were to be members of the church who were between the ages of 30-40 years. <a href="#">Read more</a></p>
+
+	  </div>
+	  
+	    <div class="col-md-4">
+	    
+	      
+	     
+	        <h4 class="text-center"><strong>Young People's Guid (YPG)</strong></h4>
+	       
+		<p><%= image_tag"logos/ypg.png", class: 'imag' %>The group was established on the 27th of August, 1977 with 12 members, 5 males and 7 
+		females. It was inaugurated on 10th December, 1978 by the Accra West District Officers as the 138th branch. The founding members 
+		included Mr John Kofi Asare, Mr Kofi Adi Ankamah <a href="#">Read more</a></p>
+		 
+	     </div>
+	    
+	<div class="col-md-4">
+
+	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
+
+		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
+		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
+		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
+		
+	</div>
+	
+		<div class="col-md-4">
+
+	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
+
+		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
+		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
+		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
+		
+	</div>
+	
+		<div class="col-md-4">
+
+	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
+
+		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
+		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
+		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
+		
+	</div>
+	
+		<div class="col-md-4">
+
+	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
+
+		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
+		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
+		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
+		
+	</div>
+	
+		<div class="col-md-4">
+
+	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
+
+		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
+		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
+		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
+		
+	</div>
+
+  </div>
+
+</div>  
+ 
+</div>
+ 
+<div class="container">
+  <div class="row">
+  
+  	 
+  		<div>
+  			<h1 class="text-center"><strong><u>OUR GALLERY</u></strong></h1>
+  	 	</div>
   	
 	<div class="col-xs-6 col-md-4">
     	<div class="thumbnail">
@@ -141,6 +192,7 @@
 		</div>
 	</div>
 </div>
-  
-</div>
+
+</div>    
+
 
