Added navbar to the application.html.erb

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,8 +18,13 @@ body {
     background: #FDF3E7;
 }
 
+.logo {
+    margin: 0px;
+    padding: 0px;
+}
+
 .navbar {
-    background: #fff; 
+   background: #7D1935;
 }
 
 .imag {
@@ -30,3 +35,4 @@ body {
 #bg {
     background: #fff;
 }
+
