--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,3 @@
-<div class="container-fluid">
-	<div class="row">
-		
-
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -15,43 +11,37 @@
     <div class="item active">
       <%= image_tag "slider/img7.png" %>
       <div class="carousel-caption">
-        <h3>God Bless Our Soul</h3>
-      </div>
-    </div>
-    <div class="item">
-      <%= image_tag "slider/img2.png" %>
-      <div class="carousel-caption">
-        <h1>May your name be praise</h1>
+        <h3></h3>
       </div>
     </div>
     
     <div class="item">
       <%= image_tag "slider/img2.png" %>
       <div class="carousel-caption">
-        <h3>God is good</h3>
+        <h1></h1>
       </div>
     </div>
     
-
-
-  <!-- Controls -->
-
+    <div class="item">
+      <%= image_tag "slider/img2.png" %>
+      <div class="carousel-caption">
+        <h3></h3>
+      </div>
+    </div>
+    
+</div>
 </div>
 
-</div>
-
-	</div>
-</div>
 
 <div id="bg">
 <div class="container">
-<div class="row">
+<div class="row col-md-9">
 	
 	<div>
   		<h3 class="text-center"><strong>GENERATIONAL AND CONGREGATIONAL GROUP</strong></h3>
   	</div>
 	
-	<div class="col-md-4">
+	<div class="col-xs-6 col-sm-3">
 	<h4 class="text-center"><strong>MEN'S FELLOWSHIP</strong></h4>
 	
 	<p><%= image_tag"logos/new.png", class: 'imag' %>We give to the good lord who inspired the faithful twelve who 
@@ -59,7 +49,7 @@
 	
 	</div>
 	  
-	<div class="col-md-4">
+	<div class="col-xs-6 col-sm-3">
 	    
 	    <h4 class="text-center"><strong>WOMEN'S FELLOWSHIP</strong></h4>
 	    <p><%= image_tag "logos/women.png", class: 'imag' %>To God be the glory for great things He has done. Amen. The Dansoman
@@ -69,7 +59,7 @@
 	    
   	</div>
 	  
-	<div class="col-md-4">
+	<div class="col-xs-6 col-sm-3">
 		
 		<h4 class="text-center">YOUNG ADULT FELLOWSHIP</h4>
 	      
@@ -80,10 +70,8 @@ Ghana. People to belong to this new group were to be members of the church who w
 
 	  </div>
 	  
-	    <div class="col-md-4">
+	   <div class=<li role="presentation" class="dropdown">>
 	    
-	      
-	     
 	        <h4 class="text-center"><strong>Young People's Guid (YPG)</strong></h4>
 	       
 		<p><%= image_tag"logos/ypg.png", class: 'imag' %>The group was established on the 27th of August, 1977 with 12 members, 5 males and 7 
@@ -92,7 +80,7 @@ Ghana. People to belong to this new group were to be members of the church who w
 		 
 	     </div>
 	    
-	<div class="col-md-4">
+	<div class="col-xs-6 col-sm-3">
 
 	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
 
@@ -147,11 +135,31 @@ Ghana. People to belong to this new group were to be members of the church who w
 </div>  
  
 </div>
+
  
 <div class="container">
-  <div class="row">
-  
-  	 
+
+		<script type="text/javascript">
+var votdtext;
+votdtext = null;
+</script>
+<script type="text/javascript" src="http://votd.Christ.com/biblevotd/votd-kjv.js">
+</script>
+<script type="text/javascript">
+if (votdtext != null) {
+   bordervars = 'border-width:3px; border-color:#c0c0c0; border-style:ridge; ';
+   textvars = 'color:#000000; font-size:15px; text-align:left; ';
+   containervars = 'background-color:#ffffcc; margin:0 auto; padding:3px; padding-left:5px; width:300px; ';
+   document.write('<div style="' + bordervars + textvars + containervars + '">' + votdtext + '<' + '/div>');
+}
+</script>
+</div> 
+
+
+</div>
+ 
+<div class="container anaimate">
+ 
   		<div>
   			<h1 class="text-center"><strong><u>OUR GALLERY</u></strong></h1>
   	 	</div>
@@ -195,4 +203,11 @@ Ghana. People to belong to this new group were to be members of the church who w
 
 </div>    
 
-
+<div class="container">
+	<div class="row col-md-6" id="bg">
+		<div class="col-md-6">
+			<h4>About Our Church</h4>
+			<p>TO BE A CHRIST-CENTRED, EVANGELISTIC, DISCIPLINED, DEMOCRATIC, UNITED,SELF-SUSTAINING AND GROWING CHURCH</p>
+		</div>
+	</div>
+</div>
