--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,28 +9,26 @@
 <body>
  
   
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container">
-   
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+<nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      
       <%= image_tag("logos/psg.png", class: "logo") %>
       </div>
       
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      
 				<li role="presentation" class="active"><%= link_to "Home", "#" %></li>
 				
         <li class="dropdown">
         <a data-toggle="dropdown"  role="button" aria-expanded="false">About<span class="caret"></span> <a/>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu navbar-right">
               <li><%= link_to "Brief History", "#" %></li>
 						  <li><%= link_to "Expansion", "#" %></li>
               <li><%= link_to "Birth of the church" %></li>
@@ -41,14 +39,14 @@
         </li>
 				<li class="dropdown">
       	     <a data-toggle="dropdown"  role="button" aria-expanded="false">Groups<span class="caret"></span> <a/>
-          		<ul class="dropdown-menu">
+          		<ul class="dropdown-menu navbar-right">
             	  <li class="dropdown"><%= link_to "GENERATIONAL GROUP", "#" %>
               	</li>
               </ul>	
 				   </li>
         <li class="dropdown">			
 			  <a data-toggle="dropdown"  role="button" aria-expanded="false">Activities<span class="caret"></span> <a/>
-          	<ul class="dropdown-menu">
+          	<ul class="dropdown-menu nav navbar-right">
 							<li class="dropdown"><%= link_to "Monthly Activities", "#" %></li>
 							<li class="dropdown"><%= link_to "Week Activities", "#" %></li>
 						</ul>
@@ -56,7 +54,7 @@
 				 
 				<li class="dropdown">			
 			  <a data-toggle="dropdown"  role="button" aria-expanded="false">Gallery<span class="caret"></span> <a/>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu nav navbar-right">
 				    <li><%= link_to "Photo", "#" %></li>
 				    <li><%= link_to "Video", "#" %></li>
 				  </ul>
