--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,135 +33,20 @@
 </div>
 
 
-<div id="bg">
-<div class="container">
-<div class="row col-md-9">
-	
-	<div>
-  		<h3 class="text-center"><strong>GENERATIONAL AND CONGREGATIONAL GROUP</strong></h3>
-  	</div>
-	
-	<div class="col-xs-6 col-sm-3">
-	<h4 class="text-center"><strong>MEN'S FELLOWSHIP</strong></h4>
-	
-	<p><%= image_tag"logos/new.png", class: 'imag' %>We give to the good lord who inspired the faithful twelve who 
-	gathered on the 20th September 1981 in the children’s service hall at the old site to begin the Emmanuel <a href="#">Read more</a> </p> 
-	
-	</div>
-	  
-	<div class="col-xs-6 col-sm-3">
-	    
-	    <h4 class="text-center"><strong>WOMEN'S FELLOWSHIP</strong></h4>
-	    <p><%= image_tag "logos/women.png", class: 'imag' %>To God be the glory for great things He has done. Amen. The Dansoman
-	    Emmanuel Congregation Women’s Fellowship was started on 18th May, 1975 with 18 members. It was the first group to be formed 
-	    in the church ehich has been established about six months earlier on December <a href="#">Read more</a> </p>
-	    
-	    
-  	</div>
-	  
-	<div class="col-xs-6 col-sm-3">
-		
-		<h4 class="text-center">YOUNG ADULT FELLOWSHIP</h4>
-	      
-
-<p><%= image_tag"logos/yaf.png", class: 'imag' %>The 2005 General Assembly held in Kumasi at the Kwame Nkrumah University of 
-Science and Technology(KNUST) decided that a new group should be formed in all the congregations of the Presbyterian Church of 
-Ghana. People to belong to this new group were to be members of the church who were between the ages of 30-40 years. <a href="#">Read more</a></p>
-
-	  </div>
-	  
-	   <div class=<li role="presentation" class="dropdown">>
-	    
-	        <h4 class="text-center"><strong>Young People's Guid (YPG)</strong></h4>
-	       
-		<p><%= image_tag"logos/ypg.png", class: 'imag' %>The group was established on the 27th of August, 1977 with 12 members, 5 males and 7 
-		females. It was inaugurated on 10th December, 1978 by the Accra West District Officers as the 138th branch. The founding members 
-		included Mr John Kofi Asare, Mr Kofi Adi Ankamah <a href="#">Read more</a></p>
-		 
-	     </div>
-	    
-	<div class="col-xs-6 col-sm-3">
-
-	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
-
-		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
-		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
-		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
-		
-	</div>
-	
-		<div class="col-md-4">
-
-	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
-
-		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
-		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
-		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
-		
-	</div>
-	
-		<div class="col-md-4">
-
-	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
-
-		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
-		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
-		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
-		
-	</div>
-	
-		<div class="col-md-4">
-
-	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
-
-		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
-		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
-		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
-		
-	</div>
-	
-		<div class="col-md-4">
-
-	    <h4 class="text-center"><strong>Bible Study and Prayer Group</strong></h4>
-
-		<p><%= image_tag"logos/bspg.png", class: 'imag' %>The group was formed in 1975 after its introduction by Bro. Osafo from 
-		Law Reporting (now with UNSW). It was inaugurated in May 1967 with an initial membership of about 20 people. The Bible teaches
-		us that “Let your light shine up on the whole world so that   <a href="#">Read more</a> </p>
-		
-	</div>
-
-  </div>
-
-</div>  
- 
-</div>
-
- 
-<div class="container">
-
-		<script type="text/javascript">
-var votdtext;
-votdtext = null;
-</script>
-<script type="text/javascript" src="http://votd.Christ.com/biblevotd/votd-kjv.js">
-</script>
-<script type="text/javascript">
-if (votdtext != null) {
-   bordervars = 'border-width:3px; border-color:#c0c0c0; border-style:ridge; ';
-   textvars = 'color:#000000; font-size:15px; text-align:left; ';
-   containervars = 'background-color:#ffffcc; margin:0 auto; padding:3px; padding-left:5px; width:300px; ';
-   document.write('<div style="' + bordervars + textvars + containervars + '">' + votdtext + '<' + '/div>');
-}
-</script>
-</div> 
-
-
 </div>
  
-<div class="container anaimate">
- 
+<div class="container">
+	
+	<div class=jumbotron>
+		<h2 class="text-center">BIBLE QUOTE</h2>
+		<p>God writes the Gospel not in the Bible alone, but also on trees, and in the 
+		flowers and clouds and stars.</p>
+		<p>Martin Luther</p>
+	</div>
+	
+ <div class="row">
   		<div>
-  			<h1 class="text-center"><strong><u>OUR GALLERY</u></strong></h1>
+  			<h3 class="text-center"><strong>OUR GALLERY</strong></h3>
   	 	</div>
   	
 	<div class="col-xs-6 col-md-4">
@@ -201,9 +86,50 @@ if (votdtext != null) {
 	</div>
 </div>
 
-</div>    
 
-<div class="container">
+
+<div class="row" id="bg">
+
+
+	
+	<div>
+  		<h3 class="text-center"><strong>GROUPS</strong></h3>
+  	</div>
+	
+	<div class="col-md-4">
+	<h4 class="text-center"><strong>MEN'S FELLOWSHIP</strong></h4>
+	
+	<p><%= image_tag"logos/new.png", class: 'imag' %>We give to the good lord who inspired the faithful twelve who 
+	gathered on the 20th September 1981 in the children’s service hall at the old site to begin the Emmanuel <a href="#">Read more</a> </p> 
+	
+	</div>
+	  
+	<div class="col-md-4">
+	    
+	    <h4 class="text-center"><strong>WOMEN'S FELLOWSHIP</strong></h4>
+	    <p><%= image_tag "logos/women.png", class: 'imag' %>To God be the glory for great things He has done. Amen. The Dansoman
+	    Emmanuel Congregation Women’s Fellowship was started on 18th May, 1975 with 18 members. It was the first group to be formed 
+	    in the church ehich has been established about six months earlier on December <a href="#">Read more</a> </p>
+	    
+	    
+  	</div>
+	  
+	<div class="col-md-4">
+		
+		<h4 class="text-center"><strong>YOUNG ADULT FELLOWSHIP</strong></h4>
+	      
+
+<p><%= image_tag"logos/yaf.png", class: 'imag' %>The 2005 General Assembly held in Kumasi at the Kwame Nkrumah University of 
+Science and Technology(KNUST) decided that a new group should be formed in all the congregations of the Presbyterian Church of 
+Ghana. People to belong to this new group were to be members of the church who were between the ages of 30-40 years. <a href="#">Read more</a></p>
+
+	  </div>
+	  
+</div>
+
+
+
+
 	<div class="row col-md-6" id="bg">
 		<div class="col-md-6">
 			<h4>About Our Church</h4>
