--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,9 +40,11 @@
 		<div class="text-center">
 			<h3><strong>BIBLE QUOTE<br><i class="fa fa-minus"></i></strong></h3>
 			<br>
-			<p class="small"><i class="fa fa-quote-left"></i>  God writes the Gospel not in the Bible alone, but also on trees, and in the 
-			flowers and clouds and stars. </p>
-			<p>Martin Luther   <i class="fa fa-quote-right"></i></p>
+			<p class="small"><i class="fa fa-quote-left"></i>  to them I will give within my temple and its walls a memorial 
+			and a name better than sons and daughters; I will give them an everlasting name that will endure forever.
+			God writes the Gospel not in the Bible alone, but also on trees, and in the 
+			flowers and clouds and stars.<i class="fa fa-quote-right"></i> </p>
+			<p>Isaiah 56:5</p>
 		</div>
 		
 </div>
@@ -56,8 +58,11 @@
 	<div class="col-md-4">
 	<h4 class="text-center"><strong>MEN'S FELLOWSHIP</strong></h4>
 	
-	<p><%= image_tag"logos/new.png", class: 'imag' %>We give to the good lord who inspired the faithful twelve who 
-	gathered on the 20th September 1981 in the children’s service hall at the old site to begin the Emmanuel <a href="#">Read more</a> </p> 
+	<p><%= image_tag"logos/new.png", class: 'imag' %>We give to the good lord who inspired the faithful twelve 
+	who gathered on the 20th September 1981 in the children’s service hall at the old site to begin the Emmanuel 
+	congregation Men’s fellowship.The idea of the formation of the congregational men’s fellowship was mooted at
+	a congregational forum by Bro. W. O. Boafo, a former vice chairman of the men’s work central committee (MWCC). 
+	<a href="#">Read more</a> </p> 
 	
 	</div>
 	  
@@ -76,9 +81,10 @@
 		<h4 class="text-center"><strong>YOUNG ADULT FELLOWSHIP</strong></h4>
 	      
 
-<p><%= image_tag"logos/yaf.png", class: 'imag' %>The 2005 General Assembly held in Kumasi at the Kwame Nkrumah University of 
-Science and Technology(KNUST) decided that a new group should be formed in all the congregations of the Presbyterian Church of 
-Ghana. People to belong to this new group were to be members of the church who were between the ages of 30-40 years. <a href="#">Read more</a></p>
+<p><%= image_tag"logos/yaf.png", class: 'imag' %>The 2005 General Assembly held in Kumasi at the Kwame
+Nkrumah University of Science and Technology(KNUST) decided that a new group should be formed in all the
+congregations of the Presbyterian Church of Ghana. People to belong to this new group were to be members 
+of the church who were between the ages of 30-40 years. <a href="#">Read more</a></p>
 
 	  </div>
 	  
@@ -89,7 +95,7 @@ Ghana. People to belong to this new group were to be members of the church who w
  <div class="row">
  		<div class="container">
   		<div>
-  			<h3 class="text-center"><strong>OUR GALLERY</strong></h3>
+  			<h3 class="text-center"><strong>OUR GALLERY <br><i class="fa fa-minus"></i></strong></h3>
   			
   	 	</div>
   	
@@ -134,27 +140,48 @@ Ghana. People to belong to this new group were to be members of the church who w
 
 <div class="footer">
 		<div class="container">
-			<div class="col-md-4">
-				<h4>ABOUT THE CHURCH</h4>
-				<p>TO BE A CHRIST-CENTRED, EVANGELISTIC, DISCIPLINED, DEMOCRATIC, UNITED,SELF-SUSTAINING AND GROWING CHURCH</p>
+			<div class="row">
+			<div class="col-xs-6 col-sm-3">
+				<h4><strong>ABOUT THE CHURCH</strong></h4>
+				<p>TO BE A CHRIST-CENTRED, EVANGELISTIC, DISCIPLINED, DEMOCRATIC, UNITED,SELF-SUSTAINING AND GROWING CHURCH.</p>
 			</div>
 			
-			<div class="col-md-4">
-					<h4>ADDRESS</h4>
-					<p>Location: Dansoman-Sahara Postal <br>Address: P. O. Box DS 91 Accra-Ghana 
-					<br>
+			<div class="col-xs-6 col-sm-3">
+					<h4><strong>ADDRESS</strong></h4>
+					<p>Location: Dansoman-Sahara Postal 
+					<br>Address: P. O. Box DS 91 Accra-Ghana 
+					<br>Email: dansoman@gapresbytery.org
 					<br>
 					Phone: 0302301626 / 0302318726<br>
-					Email: dansoman@gapresbytery.org <br></p>
+					</p>
 			</div>
 			
-			<div class="col-md-4">
-				<h4>USEFUL LINKS</h4>
+			<div class="col-xs-6 col-sm-3">
+				<h4><strong>USEFUL LINKS</strong></h4>
 				<ul>
 					<li><%= link_to "Presbyterian Church of Ghana", "http://www.pcgonline.org" %></li>
 					<li><%= link_to "Ga Presbyterian", "http://www.gapresbytery.org" %></li>
 					<li><%= link_to "Hope Presbyterian", "http://www.hopepresby.org" %></li>
 				</ul>
 			</div>
+			
+			<div class="col-xs-6 col-sm-3">
+				<h4><strong>CONNECT</strong></h4>
+				<ul>
+				<li><%= link_to "https://www.facebook.com/pages/Emmanuel-Presby-Church-Dansoman/306933439322520" do %>
+          <i class="fa fa-facebook-square text-center"></i>
+        <% end %></li>
+			  </ul>
+			 </div>
+			</div>
 		</div>
 </div>
+
+	<div class="footer2">
+		<div class=container>
+			<p class="text-center"><br>Copyright <i class="fa fa-registered"></i> 2016 All Rights Reserved</p>
+		</div>
+	</div>
+
+
+
