--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,50 +19,52 @@
           <span class="icon-bar"></span>
         </button>
       
-      <%= image_tag("logos/psg.png", class: "logo") %>
+          <%= image_tag("logos/psg.png", class: "logo") %>
       </div>
-      
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav navbar-right">
-				<li role="presentation" class="active"><%= link_to "Home", "#" %></li>
-				
+  
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+		    <li role="presentation" class="active"><%= link_to "Home", "#" %></li>
+			
         <li class="dropdown">
-        <a data-toggle="dropdown"  role="button" aria-expanded="false">About<span class="caret"></span> <a/>
+            <a data-toggle="dropdown"  role="button" aria-expanded="false">About<span class="caret"></span><a/>
           <ul class="dropdown-menu navbar-right">
-              <li><%= link_to "Brief History", "#" %></li>
-						  <li><%= link_to "Expansion", "#" %></li>
-              <li><%= link_to "Birth of the church" %></li>
-						  <li><%= link_to "Presbytors", "#" %></li>
-						  <li><%= link_to "Agents", "#" %></li>
-              <li><%= link_to "Formation of various group" %></li>
-          </ul>
+            <li><%= link_to "Brief History", "#" %></li>
+            <li><%= link_to "Expansion", "#" %></li>
+            <li><%= link_to "Birth of the church" %></li>
+			<li><%= link_to "Presbytors", "#" %></li>
+			<li><%= link_to "Agents", "#" %></li>
+            <li><%= link_to "Formation of various group" %></li>
+            </ul>
         </li>
-				<li class="dropdown">
-      	     <a data-toggle="dropdown"  role="button" aria-expanded="false">Groups<span class="caret"></span> <a/>
-          		<ul class="dropdown-menu navbar-right">
-            	  <li class="dropdown"><%= link_to "GENERATIONAL GROUP", "#" %>
-              	</li>
-              </ul>	
-				   </li>
+        
+		<li class="dropdown">
+  	         <a data-toggle="dropdown"  role="button" aria-expanded="false">Groups & Ministries<span class="caret"></span> <a/>
+      	    <ul class="dropdown-menu navbar-right">
+        	  <li class="dropdown"><%= link_to "Generational Group", "#" %></li>
+          	  <li class="dropdown"><%= link_to "Congregational Group", "#" %></li>
+            </ul>	
+		</li>
+		
         <li class="dropdown">			
-			  <a data-toggle="dropdown"  role="button" aria-expanded="false">Activities<span class="caret"></span> <a/>
-          	<ul class="dropdown-menu nav navbar-right">
-							<li class="dropdown"><%= link_to "Monthly Activities", "#" %></li>
-							<li class="dropdown"><%= link_to "Week Activities", "#" %></li>
-						</ul>
-			  </li>	   
-				 
-				<li class="dropdown">			
-			  <a data-toggle="dropdown"  role="button" aria-expanded="false">Gallery<span class="caret"></span> <a/>
-          <ul class="dropdown-menu nav navbar-right">
-				    <li><%= link_to "Photo", "#" %></li>
-				    <li><%= link_to "Video", "#" %></li>
-				  </ul>
-			  </li>
-				 
-				 <li><%= link_to "Contact", "#" %></li>
-				 
+		  <a data-toggle="dropdown"  role="button" aria-expanded="false">Activities<span class="caret"></span> <a/>
+      	    <ul class="dropdown-menu nav navbar-right">
+			    <li class="dropdown"><%= link_to "Monthly Activities", "#" %></li>
+			    <li class="dropdown"><%= link_to "Week Activities", "#" %></li>
 			</ul>
+		</li>	   
+			 
+		<li class="dropdown">			
+		      <a data-toggle="dropdown"  role="button" aria-expanded="false">Gallery<span class="caret"></span> <a/>
+          <ul class="dropdown-menu nav navbar-right">
+			<li><%= link_to "Photo", "#" %></li>
+			<li><%= link_to "Video", "#" %></li>
+		  </ul>
+		</li>
+			 
+	    <li><%= link_to "Contact", "#" %></li>
+			 
+		</ul>
     </div>  
   </div>
 </nav>
